# wynn-rs

./: Cargo.toml  devenv.nix
src/: client.rs  error.rs  lib.rs
src/client/: cache.rs  mod.rs
src/modules/: auth.rs  character.rs  guild.rs  mod.rs  player.rs  restriction.rs  territory.rs
tests/: player_character.json  territories.json
